# principlesofprogramming2025

./: LICENSE  README.md
01_BasicPython/: Intorduction.ipynb  Part1_Interpreter_Variables_Datatypes.ipynb  Part4_Collections.ipynb  Part5_Functions_Modules_Errors.ipynb  Part6_Advanced_patterns.ipynb
02_PythonOnWindows/01 - Basic Python-20251020/: Live Coding - Why is there no case statement.ipynb  Part1_Interpreter_Variables_Datatypes.ipynb  Part2_Operators.ipynb  Part3_Control_flow.ipynb  Part4_Collections.ipynb  Part5_Functions_Modules_Errors.ipynb  Part6_Advanced_patterns.ipynb  Sample_solutions.ipynb
02_PythonOnWindows/02 - Live Coding - Some Examples/: Illustrative Programming Assignment.ipynb  Illustrative Programming Tasks.ipynb  faust.txt
02_PythonOnWindows/03 - Numpy Course-20251020/: Introduction.ipynb  Part1_Basics.ipynb  Part2_Indexing_Slicing.ipynb  Part3_Statistics_Algebra.ipynb  Part4_Images.ipynb  Part5_Examples.ipynb
03_Lateration/: Lateration.ipynb
04_GIS/: 00_A Ridiculously Inefficient Way of Rasterizing Polygons.ipynb  00_WKT and DE-9IM Relations.ipynb  Part1_GeoPandas.ipynb  Part2_PySHP.ipynb  Part3_Buildings in Bavaria.ipynb  Part4_DirectlyUsingOpenStreetMap.ipynb
05_Software/: 00_SQLAlchemy.ipynb  01_fireintroduction.py
05_Software/02_todocli/: teamtodo.py  test.bat
05_Software/03_webservice/: 01_testflask.py  02_database.py  (+5 more)
05_Software/04_package/: README.md  pyproject.toml  test.py
05_Software/04_package/tumtodo/: __init__.py  __main__.py  functionality.py
06_GDAL/: .gitignore  requirements.txt
06_Software/: 02_dbex.py
(+2 files in other folders)
